[package]
name = "mdmd"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4", default_features = true, features = ["derive", "env"] }
chrono = "0.4"
thiserror = "1"

rss = "2.0"

base64 = "0.21"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

reqwest = { version = "0.11", default_features = false, features = ["rustls-tls", "json"] }

futures = "0.3"
tokio = { version = "1", default-features = false, features = ["sync", "macros", "rt"] }

log = "0.4"
env_logger = "0.10"
