[package]
name = "mdmd"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4", default-features = true, features = ["derive", "env"] }
chrono = "0.4"
thiserror = "2"

rss = "2"
tempfile = "3"

base64 = "0.21"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }

log = "0.4"
env_logger = "0.10"

[dev-dependencies]
pretty_assertions = "1.3.0"
